# remote-device-manager

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  audit_mixin.py  crud.py  database.py  docker-compose.yml  load_fake_data.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
migrations/: env.py  initial.sql
migrations/versions/: 035a665395c8_.py  1d389aa29576_adding_heartbeat_logs_table.py  2a9012cb369f_adding_serial_number_column_to_auth_.py  5cd9d6732ce7_adding_share_url_and_share_url_expires_.py  793faaf7296a_add_id_column_and_set_unique_constraints.py  83f46b609498_adding_cascade_rules_for_folder_.py  8a3569fc9d25_adding_id_column_as_pk_and_unique_.py  8f3d97abb2b6_initial.py  96524a06cd64_adding_serialno_column_to_device.py  a2ae8edef417_updating_not_null_attribute_to_so_name_.py  accc0e39210c_deleting_tenant_s_entity_when_deleting_.py  bc2db54e7936_deleting_heartbeat_log_entries_when_a_.py  c28c89e22f35_renaming_multiple_device_columns_and_.py  cfd4a91c06b0_adding_tenant_settings_table.py  d50178bd9502_deleting_tag_when_related_tenant_is_.py  e318d3496d84_removing_heartbeat_timestamp_column_.py  e3ca335ca356_revisiting_fk_constraints_for_folder_.py  e524ce85652b_removing_is_online_from_device.py
scripts/: README.md  fastapi-sia-server.service.template  restart_server.sh  tmux.conf  uvicorn-sia-log-config.yaml
src/: audit_mixin.py  database.py  exceptions.py  main.py  schemas.py  utils.py
src/auth/: constants.py  dependencies.py  exceptions.py  middleware.py  models.py  router.py  (+3 more)
tests/: database.py  test.env.template
(+90 files in other folders)
