[tool.poetry]
name = "fastapi-sia-test"
version = "0.1.0"
description = ""
authors = ["Bruno <pazosbruno@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
typing-extensions = "^4.11.0"
sqlalchemy = "^2.0.30"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-pagination = "^0.12.24"
pytest-asyncio = "^0.23.6"
python-dotenv = "^1.0.1"
pyotp = "^2.9.0"
pymysql = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
ipython = "^8.25.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"